# libgalois

./: CMakeLists.txt  makefile
cmake/: galois.pc.in
include/: galois.h
src/: galois.cpp
